--- a/toolkitapp/templates/index.html
+++ b/toolkitapp/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>存储工具测试集</title>
+    <title>存储测试工具集合</title>
     <link rel="stylesheet" href="/toolkitapp/static/layui/css/layui.css" >
 
 </head>
@@ -11,39 +11,15 @@
 <body class="layui-layout-body">
 
 <div class="layui-layout layui-layout-admin">
-    <div class="layui-header">
+    <div class="layui-header" >
     <div class="layui-logo" href="/">
-        <a href="/"> <img  src="/toolkitapp/static/media/logo.png" width="110" height="40"   alt=""></a>
+       <a href="/index/"><img src="/toolkitapp/static/media/logo.png" style="width: 100px; height: 40px"></a>
     </div>
-    <!-- 头部区域（可配合layui已有的水平导航） -->
-    <ul class="layui-nav layui-layout-right">
-        <li class="layui-nav-item">
-                <!-- 心知天气信息 -->
-                <div class="weather">
-                    <div id="tp-weather-widget" style="margin: -4px"></div>
-                    <script>(function(T,h,i,n,k,P,a,g,e){g=function(){P=h.createElement(i);a=h.getElementsByTagName(i)[0];P.src=k;P.charset="utf-8";P.async=1;a.parentNode.insertBefore(P,a)};T["ThinkPageWeatherWidgetObject"]=n;T[n]||(T[n]=function(){(T[n].q=T[n].q||[]).push(arguments)});T[n].l=+new Date();if(T.attachEvent){T.attachEvent("onload",g)}else{T.addEventListener("load",g,false)}}(window,document,"script","tpwidget","//widget.seniverse.com/widget/chameleon.js"))</script>
-                    <script>tpwidget("init", {
-                        "flavor": "slim",
-                        "location": "WT33C6J2C563",
-                        "geolocation": "enabled",
-                        "language": "zh-chs",
-                        "unit": "c",
-                        "theme": "chameleon",
-                        "container": "tp-weather-widget",
-                        "bubble": "enabled",
-                        "alarmType": "badge",
-                        "color": "#FFFFFF",
-                        "uid": "U78371FB98",
-                        "hash": "cd55c15865ecbe0f16ba78ca60ad51eb"
-                    });
-                    tpwidget("show");</script>
-                </div>
-        </li>
-    </ul>
+
   </div>
 
-    <div class="layui-side layui-bg-black">
-    <div class="layui-side-scroll">
+    <div class="layui-side layui-bg-black" >
+    <div class="layui-side-scroll" >
         <ul class="layui-nav layui-nav-tree site-demo-nav" lay-skin="">
             <li data-name="home" class="layui-nav-item ">
               <a href="javascript:;" lay-tips="性能测试" lay-direction="2">
@@ -127,7 +103,10 @@
                         <td>块存储/文件存储</td>
                         <td>
                             fio通常用于测试读写速率及IOPS速率，可用于块设备以及文件目录测试
-                            <button class="layui-btn layui-btn-sm" style="float: right" type="button" onclick="downloadFioManual()">手册资料</button>
+                            <a href="/toolkitapp/resource/manual/ABManual.html" target="_blank">
+                                <button class="layui-btn layui-btn-sm" style="float: right" type="button" >手册资料</button>
+                            </a>
+
                         </td>
                     </tr>
                     <tr>
@@ -135,7 +114,10 @@
                         <td>文件存储</td>
                         <td>
                             通常作为文件存储性能测试工具
-                            <button class="layui-btn layui-btn-sm"  style="float: right" type="button" onclick="downloadIorManual()">手册资料</button>
+                            <a href="/toolkitapp/resource/manual/IorManual.html" target="_blank">
+                                <button class="layui-btn layui-btn-sm"  style="float: right" type="button" >手册资料</button>
+                            </a>
+
                         </td>
                     </tr>
                      <tr>
@@ -143,7 +125,10 @@
                         <td>对象存储</td>
                         <td>
                             通常作为对象存储性能测试工具
-                            <button class="layui-btn layui-btn-sm"  style="float: right" type="button" onclick="downloadCosManual()">手册资料</button>
+                            <a href="/toolkitapp/resource/manual/CosManual.html" target="_blank">
+                                 <button class="layui-btn layui-btn-sm"  style="float: right" type="button" >手册资料</button>
+                            </a>
+
                         </td>
                     </tr>
                     <tr>
@@ -151,7 +136,10 @@
                         <td>文件存储</td>
                         <td>
                             通常作为文件存储读写测试工具（验证读写功能是否受影响）
-                            <button class="layui-btn layui-btn-sm"  style="float: right" type="button" onclick="downloadVDManual()">手册资料</button>
+                            <a href="/toolkitapp/resource/manual/VDManual.html" target="_blank">
+                                 <button class="layui-btn layui-btn-sm"  style="float: right" type="button" >手册资料</button>
+                            </a>
+
                         </td>
                     </tr>
                     <tr>
@@ -159,7 +147,10 @@
                         <td>文件存储</td>
                         <td>
                             通常作为文件存储MDS元数据测试工具
-                            <button class="layui-btn layui-btn-sm"  style="float: right" type="button" onclick="downloadMDManual()">手册资料</button>
+                            <a href="/toolkitapp/resource/manual/MDManual.html" target="_blank">
+                                <button class="layui-btn layui-btn-sm"  style="float: right" type="button" >手册资料</button>
+                            </a>
+
                         </td>
                     </tr>
                     <tr>
@@ -167,7 +158,10 @@
                         <td>对象存储</td>
                         <td>
                             验证对象存储授权租户是否具有正确的操作权限
-                            <button class="layui-btn layui-btn-sm"  style="float: right" type="button" onclick="downloadABManual()">手册资料</button>
+                            <a href="/toolkitapp/resource/manual/ABManual.html" target="_blank">
+                                <button class="layui-btn layui-btn-sm"  style="float: right" type="button" >手册资料</button>
+                            </a>
+
                         </td>
                     </tr>
                     <tr>
@@ -175,7 +169,10 @@
                         <td>对象存储</td>
                         <td>
                             对象存储按批次号操作测试（上传/下载/删除）
-                            <button class="layui-btn layui-btn-sm"  style="float: right" type="button" onclick="downloadOTManual()">手册资料</button>
+                            <a href="/toolkitapp/resource/manual/OTManual.html" target="_blank">
+                                <button class="layui-btn layui-btn-sm"  style="float: right" type="button">手册资料</button>
+                            </a>
+
                         </td>
                     </tr>
                     <tr>
@@ -183,7 +180,10 @@
                         <td>SSA接口测试</td>
                         <td>
                             SSA API接口测试（对外提供接口）
-                            <button class="layui-btn layui-btn-sm"  style="float: right" type="button" onclick="downloadBATManual()">手册资料</button>
+                            <a href="/toolkitapp/resource/manual/BATManual.html" target="_blank">
+                                <button class="layui-btn layui-btn-sm"  style="float: right" type="button" >手册资料</button>
+                            </a>
+
                         </td>
                     </tr>
 
@@ -204,38 +204,6 @@
 <script src="/toolkitapp/static/layui/layui.all.js"></script>
 <script>
 
-
-    function downloadFioManual() {
-
-    }
-
-    function downloadIorManual(){
-
-    }
-
-    function downloadCosManual(){
-
-    }
-
-    function downloadVDManual(){
-
-    }
-
-    function downloadMDManual(){
-
-    }
-
-    function downloadABManual(){
-
-    }
-
-    function downloadOTManual(){
-
-    }
-
-    function downloadBATManual(){
-        
-    }
 
 </script>
 
